@@ -11,7 +11,7 @@ Principal Component Analysis plot
 dba.plotPCA(DBA, attributes, minval, maxval,
            contrast, method=DBA$config$AnalysisMethod, 
            th=DBA$config$th, bUsePval=DBA$config$bUsePval, 
-           report, score, mask, sites, cor=FALSE,
+           report, score, mask, sites, label, cor=FALSE,
            b3D=FALSE, vColors, dotSize, ...)
 }
 %- maybe also 'usage' for other objects documented here.
@@ -95,6 +95,10 @@ mask indicating a subset of peaksets to use when using global binding matrix sco
  \item{sites}{
 logical vector indicating which sites to include in PCA. Only relevant when using global binding matrix (contrast is missing).
 }
+ \item{label}{
+A metadata field to use as a label in 2D plots. The value for this field will be written directly onthe plot near the dot for each sample. Values can be any of those vlaid for the \code{attributes} parameter.
+}
+
  \item{cor}{
 a logical value indicating whether the calculation should use the correlation matrix or the covariance matrix. Passed into princomp.
 }
@@ -128,7 +132,7 @@ dba.plotPCA(DBA, attributes, minval, maxval,
                        b3D=F, vColors, dotSize, ...)
 }
 \value{
-matrix with color legend
+\code{trellis} plot from \code{\link{lattice}} package; see \code{\link{xyplot}}
 }
 %\references{
 %% ~put references to the literature/web site here ~
@@ -160,10 +164,12 @@ dba.plotPCA(tamoxifen)
 dba.plotPCA(tamoxifen,contrast=1,th=1)
 
 #PCA based on DB sites only
-par(mfrow=c(1,2))
-dba.plotPCA(tamoxifen,contrast=1)
-dba.plotPCA(tamoxifen,contrast=1,attributes=DBA_TISSUE)
-
+p = dba.plotPCA(tamoxifen,contrast=1)
+p = dba.plotPCA(tamoxifen,contrast=1,attributes=DBA_TISSUE)
+p = dba.plotPCA(tamoxifen,contrast=1,attributes=DBA_TISSUE,label=DBA_CONDITION)
+p = dba.plotPCA(tamoxifen,contrast=1,attributes=DBA_CONDITION,label=DBA_TISSUE)
+p = dba.plotPCA(tamoxifen,contrast=1,attributes=c(DBA_TISSUE,DBA_CONDITION),
+                label=DBA_REPLICATE)
 }
 % Add one or more standard keywords, see file 'KEYWORDS' in the
 % R documentation directory.
